--- a/sass/style.sass
+++ b/sass/style.sass
@@ -187,6 +187,9 @@ details
 
   &[open] > summary:after
     content: "—"
+dialog
+  max-width: 100%
+  max-height: 100%
 
 .desktop--block
   display: block
@@ -770,6 +773,9 @@ details
 
   @media screen and (max-width: $tablet)
     padding-bottom: 0
+
+.hero__container__image
+  width: 100%
 /* Main -- Hero end */
 
 /* Main -- Brands start */
@@ -1785,13 +1791,14 @@ details
   @media screen and (max-width: $tablet)
     position: absolute
     width: calc(100% - 2*1.4rem)
+    gap: 1rem
 
 
 .catalogue__sorting__select__item
   width: 100%
   
   @media screen and (max-width: $tablet)
-    padding: 1rem 0
+    padding: .5rem 0
 
 .catalogue__sorting__select__item__link
   cursor: pointer
@@ -1802,9 +1809,12 @@ details
 .catalogue__filters
   grid-area: filters
 
+  @media screen and (min-width: $tablet+1)
+    display: block
+    position: relative
+
   @media screen and (max-width: $tablet)
-    display: none
-    position: absolute
+    position: fixed
     z-index: 5
     top: 0
     left: 0
@@ -1881,19 +1891,32 @@ details
   max-height: 15rem
   scrollbar-color: $grey #fff
 
+.catalogue__filters__container__feature__heading, .catalogue__filters__container__feature--label
+  font-size: 1.6rem
+
+  @media screen and (min-width: $tablet+1) and (max-width: $desktop)
+    font-size: 1.4rem
+
 .catalogue__filters__container__buttons
   display: flex
   flex-direction: column
   gap: .5rem
   width: 100%
 
+
 .catalogue__filters__container__buttons__clear, .catalogue__filters__container__buttons__apply
   width: 100%
   text-align: center
-  padding: 2rem
   font-size: 1.6rem
   font-weight: 500
   line-height: 130%
+  padding: 1rem
+
+  @media screen and (min-width: $tablet+1) and (max-width: $desktop)
+    font-size: 1.4rem
+
+  @media screen and (max-width: $tablet)
+    padding: 2rem
 
 .catalogue__filters__container__buttons__apply
   display: none
