Отредактированы стандартные стили заголовков

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -50,14 +50,6 @@ h1, h2, h3, h4, h5, h6
   color: $black
 
 h1, .h1
-  font-size: 6rem
-  line-height: 130%
-
-  @media screen and (max-width: $tablet)
-    font-size: 4rem
-    line-height: 110%
-
-h2, .h2
   font-size: 4rem
   line-height: 110%
     
@@ -65,12 +57,19 @@ h2, .h2
     font-size: 2.8rem
     line-height: 130%
 
-h3, .h3
+h2, .h2
   font-size: 2.8rem
   line-height: 130%
 
   @media screen and (max-width: $tablet)
     font-size: 1.6rem
+
+h3, .h3
+  font-size: 1.6rem
+  line-height: 130%
+
+  @media screen and (max-width: $tablet)
+    font-size: 1.4rem
 
 .h3-1--pink
   font-size: 2rem
@@ -81,13 +80,6 @@ h3, .h3
     font-size: 1.8rem
 
 h4, .h4
-  font-size: 1.6rem
-  line-height: 130%
-
-  @media screen and (max-width: $tablet)
-    font-size: 1.4rem
-
-h5, .h5
   font-size: 1.4rem
   line-height: 130%
 
@@ -95,11 +87,17 @@ h5, .h5
     font-size: 1.2rem
     line-height: 110%
 
-h6, .h6
+h5, .h5
   font-size: 1.2rem
 
   @media screen and (max-width: $tablet)
     font-size: 1rem
+
+h6, .h6
+  font-size: 1.1rem
+
+  @media screen and (max-width: $tablet)
+    font-size: .8rem
 
 input
   accent-color: $pink
