--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1334,51 +1334,53 @@ dialog
   background-image: url('../images/icons/trash.svg')
 
 .cart_contents__summary
+  margin-bottom: 3rem
+
+.cart_contents__summary__container
   display: flex
   flex-direction: column
   gap: 1rem
-  margin-bottom: 3rem
 
-.cart_contents__summary__sticky
+.cart_contents__summary--sticky
   position: sticky
   top: 1rem
 
-.cart_contents__summary__sticky__top
+.cart_contents__summary__container__top
   padding: 2rem
   background-color: $grey1
   border-radius: $radius
 
-.cart_contents__summary__sticky__top__heading, .cart_contents__summary__sticky__bottom__heading
+.cart_contents__summary__container__top__heading, .cart_contents__summary__container__bottom__heading
   display: inline-block
   font-size: 1.6rem
   line-height: 130%
   font-weight: 700
 
-.cart_contents__summary__sticky__top__heading
+.cart_contents__summary__container__top__heading
   margin-bottom: 1rem
 
-.cart_contents__summary__sticky__top__detalization
+.cart_contents__summary__container__top__detalization
   display: grid
   grid-template-columns: 1fr 1fr
   font-size: 1.2rem
   line-height: 130%
   font-weight: 200
 
-.cart_contents__summary__sticky__top__detalization__name
+.cart_contents__summary__container__top__detalization__name
   justify-self: left
 
-.cart_contents__summary__sticky__top__detalization__summ
+.cart_contents__summary__container__top__detalization__summ
   justify-self: right
 
-.cart_contents__summary__sticky__bottom
+.cart_contents__summary__container__bottom
   padding: 2rem
   background-color: #fff
   border-radius: $radius
 
-.cart_contents__summary__sticky__bottom__heading
+.cart_contents__summary__container__bottom__heading
   margin-bottom: 2rem
 
-.cart_contents__summary__sticky__bottom__button
+.cart_contents__summary__container__bottom__button
   width: 100%
   text-align: center
   font-size: 1.6rem
@@ -1423,6 +1425,177 @@ dialog
   @media screen and (max-width: $tablet)
     width: 100%
 /* Cart epmty end */
+
+/* Order start */
+.order
+  display: grid
+  grid-template-columns: auto 44rem
+  gap: 4rem
+  margin-bottom: 6rem
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 1fr
+
+.order__left__subheading
+  display: inline-block
+  margin-bottom: 2rem
+  font-size: 2rem
+  font-weight: 700
+  line-height: 130%
+
+.order__left__city__select
+  color: $pink
+  padding-right: 2rem
+  background-image: url('../images/icons/down-pink.svg')
+  background-repeat: no-repeat
+  background-position: right 70%
+  cursor: pointer
+  
+.order__left__delivery
+  display: flex
+  gap: 1rem
+
+.order__left__delivery__option
+  display: flex
+  flex-direction: column
+  gap: 1rem
+  padding: 1.6rem
+  width: 50%
+  background-color: #fff
+  border-radius: $radius
+  cursor: pointer
+
+.order__left__options__option__heading
+  font-size: 1.6rem
+  font-weight: 700
+  line-height: 130%
+
+.order__left__options__option__info
+  font-size: 1.4rem
+  font-weight: 200
+  line-height: 130%
+
+.order__left__options__option__select
+  font-size: 1.3rem
+  font-weight: 200
+  line-height: 130%
+  color: $pink
+
+.order__left__payment
+  display: flex
+  gap: 1rem
+
+.order__left__payment__option
+  background-color: #fff
+  color: $black
+
+.order__left__payment__option--active
+  background-color: $black
+  color: #fff
+
+.order__left__promo
+  display: flex
+  gap: 1rem
+  margin: 4rem 0
+
+.order__left__promo__area
+  display: flex
+  flex-direction: column
+  padding: 2rem
+  width: 28.2rem
+  font-size: 1.4rem
+  font-weight: 200
+  line-height: 130%
+  color: $black
+  background-color: $grey1
+  border-radius: $radius
+
+.order__left__promo__area__heading
+  display: inline-block
+  margin-bottom: 1rem
+  font-weight: 700
+
+.order__left__promo__area input
+  padding: 1.4rem
+  background-color: #fff
+  border-radius: $radius
+  background-image: url('../images/icons/down-purple.svg')
+  background-size: 1.2rem
+  background-repeat: no-repeat
+  background-position: right 1.7rem top 50%
+
+.order__left__byuer
+  display: grid
+  gap: 1rem
+  grid-template-rows: repeat(3, 1fr)
+  grid-template-columns: "1fr 1fr"
+  grid-auto-flow: column
+  max-width: calc(60rem + 1rem)
+
+.order__left__byuer__textarea
+  grid-row: span 3
+
+.order__left__byuer__input, .order__left__byuer__textarea
+  padding: 1.4rem
+  background-color: #fff
+  border-radius: $radius
+  width: 30rem
+
+.order__right__products
+  display: flex
+  flex-direction: column
+  margin-bottom: 1rem
+  background-color: #fff
+  border-radius: $radius
+  padding: 0 2rem
+
+.order__right__products__item
+  display: grid
+  grid-template-columns: 10rem auto auto
+  gap: 1rem
+  padding: 2rem 0
+  border-bottom: 1px solid $grey1
+
+.order__right__products__item__image
+  width: 10rem
+  align-self: center
+
+.order__right__products__item__name
+  font-size: 1.4rem
+  font-weight: 200
+  line-height: 130%
+  color: $black
+  align-self: center
+
+.order__right__products__item__price
+  display: flex
+  flex-direction: column
+  gap: .4rem
+  align-items: end
+  justify-content: center
+
+.order__right__products__item__price__total
+  font-size: 1.6rem
+  font-weight: 200
+  line-height: 130%
+  color: $black
+  white-space: nowrap
+
+.order__right__products__item__price__single
+  font-size: 1.2rem
+  font-weight: 200
+  line-height: 130%
+  color: $grey-dark2
+  white-space: nowrap
+
+.cart_contents__summary__container__terms
+  color: $grey-dark2
+  font-size: 1.4rem
+
+  a
+    color: $pink
+
+/* Order end */
 
 /* Text start */
 .text, .text--center
