--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,6 +25,7 @@ $beige-bg: #FFF3F3
 $coral-bg: #FF9A9A
 $scarlet-bg: #FF573D
 $green-bg: #3DCF92
+$orange: #FFAC4B
   
 /* Common start */
 html
@@ -1496,9 +1497,6 @@ dialog
   gap: 1rem
   flex-wrap: wrap
 
-  // @media screen and (max-width: $tablet)
-  //   flex-direction: column
-
 .order__left__payment__option
   background-color: #fff
   color: $black
@@ -1545,7 +1543,7 @@ dialog
   background-repeat: no-repeat
   background-position: right 1.7rem top 50%
 
-.order__left__byuer
+.order__left__buyer
   display: grid
   gap: 1rem
   grid-template-rows: repeat(3, 1fr)
@@ -1557,10 +1555,10 @@ dialog
     grid-template-columns: 1fr
     grid-template-rows: repeat(6, 1fr)
 
-.order__left__byuer__textarea
+.order__left__buyer__textarea
   grid-row: span 3
 
-.order__left__byuer__input, .order__left__byuer__textarea
+.order__left__buyer__input, .order__left__buyer__textarea
   padding: 1.4rem
   background-color: #fff
   border-radius: $radius
@@ -1583,6 +1581,9 @@ dialog
   gap: 1rem
   padding: 2rem 0
   border-bottom: 1px solid $grey1
+
+  &:last-child
+    border: none
 
 .order__right__products__item__image
   width: 10rem
@@ -1623,6 +1624,177 @@ dialog
   a
     color: $pink
 
+.success_heading
+  margin-top: 6rem
+  margin-bottom: 6rem
+  max-width: 96rem
+  text-align: center
+
+.success_heading__number
+  color: $pink
+
+.success_heading__message
+  display: inline-block
+  margin-top: 2rem
+  padding: 1.4rem 2rem
+  font-size: 1.4rem
+  line-height: 130%
+  background-color: $grey1
+  border-radius: $radius
+
+.success_heading__image
+  display: block
+  margin: 6rem auto
+  width: 16.2rem
+
+.success_order_info
+  max-width: 96rem
+
+.success_order_info__main
+  display: flex
+  gap: 2rem
+  margin-bottom: 2rem
+
+.success_order_info__main__number
+  font-size: 1.6rem
+  color: $pink
+
+.success_order_info__main__date
+  font-size: 1.3rem
+
+.success_order_info__main__status
+  padding: .2rem .8rem .4rem
+  font-size: 1.2rem
+  color: #fff
+  background-color: $orange
+  border-radius: $radius
+
+.success_order_info__summary
+  display: grid
+  grid-template-columns: repeat(3, 1fr)
+  gap: 6rem
+  padding: 2rem
+  width: 100%
+  background-color: #fff
+  border-radius: $radius
+
+.success_order_info__summary__heading
+  font-size: 1.4rem
+  font-weight: 700
+
+.success_order_contents
+  display: flex
+  flex-direction: column
+  margin-top: 2rem
+  margin-bottom: 1rem
+  max-width: 96rem
+  border-radius: 0.4rem
+
+.success_order_contents__products
+  display: flex
+  flex-direction: column
+  margin-bottom: 1rem
+  background-color: #fff
+  border-radius: $radius
+  padding: 0 2rem
+
+.success_order_contents__products__item
+  display: grid
+  grid-template-columns: 10rem auto 10rem
+  gap: 1rem
+  padding: 2rem 0
+  border-bottom: 1px solid #F5F5F5
+
+  &:last-child
+    border: none
+
+.success_order_contents__products__item__cost
+  display: flex
+  flex-direction: column
+  gap: .4rem
+  justify-self: right
+  justify-content: center
+  align-items: end
+  
+  @media screen and (max-width: $desktop)
+    display: flex
+
+.success_order_contents__products__item__cost__current
+  font-size: 1.6rem
+  line-height: 130%
+  font-weight: 700
+  color: $black
+
+.success_order_contents__products__item__price
+  font-size: 1.2rem
+  line-height: 130%
+  font-weight: 200
+  color: $grey-dark2
+  text-decoration: line-through
+
+.success_order_contents__summary
+  display: flex
+  flex-direction: column
+  gap: 1rem
+  padding: 2rem
+  max-width: 33rem
+  background-color: $grey1
+  border-radius: $radius
+
+.success_order_contents__summary__heading
+  font-size: 1.4rem
+  font-weight: 700
+  line-height: 130%
+
+.success_order_contents__summary__detalization
+  display: grid
+  grid-template-columns: 1fr 1fr
+  font-size: 1.2rem
+  font-weight: 200
+  line-height: 130%
+
+.success_order_contents__summary__detalization__name
+  justify-self: left
+
+.success_order_contents__summary__detalization__summ
+  justify-self: right
+
+.success_order_contents__summary__heading
+  font-size: 1.6rem
+  font-weight: 700
+  line-height: 130%
+
+.success_order_info__summary__delivery__info, .success_order_info__summary__payment__info, .success_order_info__summary__buyer__info
+  display: flex
+  flex-direction: column
+  gap: 1.2rem
+  margin-top: 1.4rem
+  width: 100%
+
+.success_order_info__summary__delivery__info__item, .success_order_info__summary__payment__info__item, .success_order_info__summary__buyer__info__item
+  display: flex
+  justify-content: space-between
+  font-size: 1.4rem
+  line-height: 130%
+  color: $grey-dark2
+
+.success_order_info__summary__delivery__info__item__dots, .success_order_info__summary__payment__info__item__dots, .success_order_info__summary__buyer__info__item__dots
+  min-width: 1rem
+  flex: 1 0
+  border-bottom: 1px dotted $grey-dark2
+  height: 1rem
+  margin: 0.4em
+
+.success_order_info__summary__delivery__info__item__value, .success_order_info__summary__payment__info__item__value, .success_order_info__summary__buyer__info__item__value
+  color: $black
+
+.success_order_info__summary__delivery__info__item
+  flex-wrap: wrap
+
+.buy_more
+  margin: 6rem auto
+  max-width: 96rem
+  text-align: center
 /* Order end */
 
 /* Text start */
