--- a/sass/style.sass
+++ b/sass/style.sass
@@ -255,6 +255,15 @@ dialog
   &:hover
     background-color: $pink
 
+.button--white
+  color: $black
+  background-color: #fff
+  transition: 0.2s linear
+
+  &:hover
+    background-color: $black
+    color: #fff
+
 .header,
 .main,
 .footer
@@ -2897,4 +2906,279 @@ dialog
 
 /* Product start */
 
+.product__helpers
+  display: flex
+  gap: .6rem
+  font-size: 1.2rem
+  line-height: 130%
+  font-weight: 200
+
+.product__helpers__id
+  padding: .2rem .8rem .4rem
+  color: $grey-dark2
+  background-color: $grey1
+  border-radius: $radius
+
+.product__helpers__stock
+  padding: .2rem .8rem .4rem
+  color: $pink
+  background-color: #fff
+  border-radius: $radius
+
+.product__condition
+  display: flex
+  gap: .6rem
+  
+.product__condition__option
+  padding: .6rem 1.8rem .8rem
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  border-radius: $radius
+  color: $black
+  background-color: #fff
+  cursor: pointer
+
+.product__condition__option--active
+  color: #fff
+  background-color: $black
+
+.product__heading
+  font-size: 2rem
+  font-weight: 700
+  line-height: 130%
+
+.product__gallery__image
+  width: 100%
+  padding: 3.1rem
+  cursor: pointer
+
+.product__gallery__preview
+  display: flex
+  flex-direction: column
+  gap: .3rem
+
+.product__gallery__preview__image
+  padding: .8rem
+  width: 6rem
+  height: 6rem
+  cursor: pointer
+  background-color: #fff
+  border-radius: $radius
+
+.product__gallery__preview__up
+  width: 6rem
+  height: 1.6rem
+  background-size: 1.6rem
+  background-image: url('../images/icons/up-black.svg')
+  background-repeat: no-repeat
+  background-position: 50% 50%
+  cursor: pointer
+
+.product__gallery__preview__down
+  width: 6rem
+  height: 1.6rem
+  background-size: 1.6rem
+  background-image: url('../images/icons/down-black.svg')
+  background-repeat: no-repeat
+  background-position: 50% 50%
+  cursor: pointer
+
+.product__guarantee__button
+  padding: .4rem 1.2rem .6rem calc(1.2rem + .4rem + 1.6rem)
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  border-radius: $radius
+  color: #fff
+  background-color: $black
+  cursor: pointer
+  background-size: 1.6rem
+  background-image: url('../images/icons/guarantee.svg')
+  background-repeat: no-repeat
+  background-position: left 1.2rem top 50%
+
+.product__options__option__name
+  font-size: 1.6rem
+  font-weight: 500
+  line-height: 130%
+  color: $black
+
+.product__options__option__values
+  display: flex
+  gap: .8rem
+
+.product__options__option__values__color
+  border-radius: 50%
+  width: 2rem
+  height: 2rem
+
+.option__color--belyi
+  background-color: #fff
+  border: 1px solid $grey-dark1
+
+.option__color--bezhevyi
+  background-color: #E9E5DA
+
+.option__color--seryi
+  background-color: #D2D2D2
+
+.option__color--zelenyi
+  background-color: #E0F1C5
+
+.product__options__option__values__value
+  padding: .4rem 1.6rem .6rem
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  color: $black
+  background-color: #fff
+  border-radius: $radius
+
+.product__options__option__values__value--active, .product__options__option__values__color--active
+  border: 1px dotted $pink
+
+.product__summary__heading
+  font-size: 1.6rem
+  font-weight: 500
+  line-height: 130%
+  color: $black
+
+.product__summary__list
+  display: flex
+  flex-direction: column
+  gap: 1.4rem
+  margin-top: 1.4rem
+  margin-bottom: 1.4rem
+  width: 100%
+
+.product__summary__list__item
+  display: flex
+  justify-content: space-between
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  color: $grey-dark2
+  
+.product__summary__list__item__name
+
+.product__summary__list__item__dots
+  min-width: 1rem
+  flex: 1 0
+  border-bottom: 1px dotted $grey-dark2
+  height: 1rem
+  margin: 0.4em
+
+.product__summary__list__item__value
+  color: $black
+
+.product__summary__more
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%  
+  color: $pink
+
+.product__buy__prices
+  gap: 0.4rem
+  align-items: center
+
+  @media screen and (max-width: $tablet)
+    align-items: flex-start
+    flex-direction: column
+
+.product__buy__prices__current
+  font-size: 2rem
+  line-height: 130%
+  font-weight: 700
+  color: $black
+  white-space: nowrap
+
+.product__buy__prices__old
+  font-size: 1.2rem
+  line-height: 130%
+  font-weight: 500
+  color: $grey-dark2
+  text-decoration: line-through
+  white-space: nowrap
+
+.product__buy__add_to_cart
+  width: 100%
+
+.product__buy__row2_buttons
+  display: grid
+  grid-template-columns: auto 4.8rem
+  gap: .4rem
+
+.product__buy__row2_buttons__order
+  width: 100%
+  background-color: #fff
+
+.product__buy__row2_buttons__favourites
+  background-image: url('../images/icons/heart-grey.svg')
+  background-size: 2rem
+  background-position: 50% 50%
+  background-repeat: no-repeat
+
+  &:hover
+    background-image: url('../images/icons/heart-pink.svg')
+    cursor: pointer
+
+.product__delivery__location
+  font-size: 1.6rem
+  line-height: 130%
+  font-weight: 500
+
+.product__delivery__location__city
+  color: $pink
+  cursor: pointer
+
+.product__delivery__options
+  display: flex
+  flex-direction: column
+  gap: 1rem
+
+.product__delivery__options__option
+  display: flex
+  flex-direction: column
+  gap: 1rem
+  padding: 1.6rem
+  background-color: #fff
+  border-radius: $radius
+
+.product__delivery__options__option__heading
+  font-size: 1.6rem
+  font-weight: 700
+  line-height: 130%
+  color: $black
+
+.product__delivery__options__option__info
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  color: $black
+
+.product__delivery__options__option__link
+  font-size: 1.2rem
+  font-weight: 500
+  line-height: 130%
+  color: $pink
+
+.product__tabs
+  display: flex
+  gap: .6rem
+  
+.product__tabs__tab
+  padding: .6rem 1.8rem .8rem
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  border-radius: $radius
+  color: $black
+  background-color: #fff
+  cursor: pointer
+
+.product__tabs__tab--active
+  color: #fff
+  background-color: $black
+  cursor: default
 /* Product end */
