--- a/sass/style.sass
+++ b/sass/style.sass
@@ -45,6 +45,9 @@ body
   color: $black
   background-color: $white
 
+  @media screen and (max-width: $tablet)
+    display: block
+
 h1, h2, h3, h4, h5, h6
   font-family: $font
   font-weight: 700
@@ -2912,6 +2915,16 @@ dialog
   grid-template-rows: 3.2rem 2.6rem calc(2.8rem + 1rem + .6rem) auto auto auto
   grid-template-areas: "helpers condition condition" "gallery heading heading" "gallery guarantee guarantee" "gallery options buy" "tabs tabs tabs" "promo promo promo"
 
+  @media screen and (max-width: $desktop)
+    grid-template-columns: 53% 47%
+    grid-template-rows: 3.2rem auto calc(2.8rem + 1rem + .6rem) auto auto auto auto
+    grid-template-areas: "helpers condition" "gallery heading" "gallery guarantee" "gallery options" "gallery buy" "tabs tabs" "promo promo"
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 100%
+    grid-template-rows: 3.2rem auto calc(2.8rem + 1rem + .6rem) auto auto auto auto
+    grid-template-areas: "condition" "heading" "guarantee" "helpers" "gallery" "options" "buy" "tabs" "promo"
+
 .product__helpers
   grid-area: helpers
   display: flex
@@ -2965,6 +2978,11 @@ dialog
   gap: 1rem
   padding-right: 1.6rem
 
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 1fr
+    gap: 2rem
+    padding: 0
+
 .product__gallery__image
   width: 100%
   cursor: pointer
@@ -2974,6 +2992,9 @@ dialog
   display: flex
   flex-direction: column
   gap: .3rem
+
+  @media screen and (max-width: $tablet)
+    display: none
 
 .product__gallery__preview__image
   padding: .8rem
@@ -3001,6 +3022,14 @@ dialog
   background-position: 50% 50%
   cursor: pointer
 
+.product__gallery__dots
+  display: none
+  
+  @media screen and (max-width: $tablet)
+    display: flex
+    margin: 0 auto
+    padding: 0 1rem 0
+
 .product__guarantee
   grid-area: guarantee
   margin-top: .6rem
@@ -3027,6 +3056,9 @@ dialog
   flex-direction: column
   gap: 2rem
   margin-right: 3rem
+
+  @media screen and (max-width: $tablet)
+    margin-right: 0
 
 .product__options__option
   display: grid
@@ -3225,6 +3257,10 @@ dialog
   display: flex
   gap: .6rem
   padding-top: 1rem
+
+  @media screen and (max-width: $tablet)
+    margin-top: 4rem
+    padding-top: 0
   
 .product__tabs__tab
   padding: .6rem 1.8rem .8rem
@@ -3253,44 +3289,74 @@ dialog
   display: flex
   flex-direction: column
   gap: 3rem
-  height: 62rem
+  background-color: $black
+  border-radius: $radius
+  overflow: hidden
 
 .product__promo__hero__heading
+  margin: 0 auto
   padding: 5rem 5rem 0 5rem
+  max-width: 80rem
   font-size: 4rem
-  font-weight: 500
+  font-weight: 700
   line-height: 110%
   color: $white
   text-align: center
 
+  @media screen and (max-width: $tablet)
+    padding: 2rem 2rem 0 2rem
+    max-width: 100%
+    font-size: 2rem
+
+
 .product__promo__hero__text
+  margin: 0 auto
   padding: 0 5rem
+  max-width: 80rem
   font-size: 2rem
   font-weight: 400
   line-height: 130%
   color: $white
   text-align: center
 
+  @media screen and (max-width: $tablet)
+    padding: 0 1rem
+    max-width: 100%
+    font-size: 1.4rem
+
 .product__promo__hero__accent
+  margin: 0 auto
   padding: 0 5rem 5rem 5rem
+  max-width: 80rem
   font-size: 2rem
   font-weight: 700
   line-height: 130%
   color: #0056FE
   text-align: center
+
+  @media screen and (max-width: $tablet)
+    padding: 0 1rem 0 1rem
+    max-width: 100%
+    font-size: 1.6rem
   
 .product__promo__hero__image
-  position: absolute
+  
 
 .product__promo__hero__image--accent
-  z-index: -1
-  object-fit: cover
-  bottom: 0
+  margin: 0 auto
+  // z-index: -1
+  // object-fit: cover
+  // bottom: 0
+  max-width: 80rem
+
+  @media screen and (max-width: $tablet)
+    max-width: 80%
 
 .product__promo__hero__image--background
+  position: absolute
   z-index: -2
-  object-fit: cover
-  top: 0
+  object-fit: contain
+  bottom: 0
 
 .product__promo__double, .product__promo__tripple
   display: grid
@@ -3302,6 +3368,9 @@ dialog
 .product__promo__tripple
   grid-template-columns: 1fr 1fr 1fr
 
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 1fr
+
 .product__promo__double__item, .product__promo__tripple__item
   position: relative
   border-radius: $radius
@@ -3312,6 +3381,10 @@ dialog
 
 .product__promo__tripple__item
   min-height: 47.6rem
+
+  @media screen and (max-width: $tablet)
+    min-height: unset
+    padding-bottom: 40%
   
 .product__promo__double__item__heading, .product__promo__tripple__item__heading
   padding: 4rem 4rem 2rem 4rem
@@ -3320,12 +3393,20 @@ dialog
   line-height: 110%
   color: $white
 
+  @media screen and (max-width: $tablet)
+    padding: 2rem 2rem 1rem 2rem
+    font-size: 2rem
+
 .product__promo__double__item__text, .product__promo__tripple__item__text
   padding: 0 4rem 4rem 4rem
   font-size: 2rem
   font-weight: 500
   line-height: 130%
   color: $white
+
+  @media screen and (max-width: $tablet)
+    padding: 0 2rem 2rem 2rem
+    font-size: 1.4rem
 
 .product__promo__tripple__item__cover
   position: absolute
@@ -3337,8 +3418,10 @@ dialog
 
 .product__promo__double__item__image, .product__promo__tripple__item__image
   position: absolute
+  width: 100%
+  height: 100%
   z-index: -2
-  object-fit: fill
+  object-fit: cover
   bottom: 0
   border-radius: $radius
   background-color: #000
@@ -3351,6 +3434,9 @@ dialog
   background-color: $grey1
   border-radius: $radius
 
+  @media screen and (max-width: $tablet)
+    gap: 1rem
+
 .product__promo__store__heading
   padding: 4rem 4rem 0 4rem
   font-size: 4rem
@@ -3358,12 +3444,20 @@ dialog
   line-height: 110%
   color: $black
 
+  @media screen and (max-width: $tablet)
+    padding: 2rem 2rem 0 2rem
+    font-size: 2rem
+
 .product__promo__store__description
   padding: 0 4rem 4rem 4rem
   font-size: 2rem
   font-weight: 500
   line-height: 130%
   color: $black
+
+  @media screen and (max-width: $tablet)
+    padding: 0 2rem 2rem 2rem
+    font-size: 1.4rem
 
 .product__promo__store__gallery
   display: grid
@@ -3373,11 +3467,37 @@ dialog
   max-width: 102rem
   margin: 3rem auto 0
 
+  @media screen and (max-width: $tablet)
+    grid-template-columns: repeat(6, 11.3rem)
+    grid-template-rows: auto
+    margin: 0 auto
+    max-width: 100%
+    overflow-x: scroll
+
 .product__promo__text-n-img
   position: relative
   display: grid
   grid-template-columns: 1fr 1fr
   gap: 1rem
+
+  @media screen and (max-width: $tablet)
+    grid-template-columns: 1fr
+
+.mobile--reverse
+  
+  @media screen and (max-width: $tablet)
+    display: flex
+    flex-direction: column-reverse
+
+
+.product__promo__text-n-img__text__heading
+  font-size: 4rem
+  font-weight: 500
+  line-height: 110%
+  color: $black
+
+  @media screen and (max-width: $tablet)
+    font-size: 2rem
 
 .product__promo__text-n-img__text
   display: grid
@@ -3386,32 +3506,53 @@ dialog
   background-color: $grey1
   border-radius: $radius
 
+  @media screen and (max-width: $tablet)
+    font-size: 1.4rem
+
 .product__promo__text-n-img__text__details__list__item__heading
   font-size: 4rem
   font-weight: 500
   line-height: 110%
   color: $black
 
+  @media screen and (max-width: $tablet)
+    font-size: 2rem
+
 .product__promo__text-n-img__text__details
   font-size: 2rem
-  font-weight: 500
+  font-weight: 400
   line-height: 130%
   color: $black
+
+  @media screen and (max-width: $tablet)
+    font-size: 1.4rem
 
 .product__promo__text-n-img__image
   border-radius: $radius
   background-color: #000
+  object-fit: cover
+  width: 100%
+  height: 100%
 
 .product__promo__text-n-img__text__details__list
   display: grid
   gap: 3rem
 
 .product__promo__text-n-img__text__details__list__item
+  border-bottom: .1rem solid $black
+
+  &:last-child
+    border-bottom: none
 
 .product__promo__text-n-img__text__details__list__item__text
   display: block
   padding-bottom: 2rem
-  border-bottom: .1rem solid $black
+  font-size: 2rem
+  font-weight: 400
+  line-height: 130%
+
+  @media screen and (max-width: $tablet)
+    font-size: 1.4rem
 
 .product__characteristics
   grid-area: characteristics
