--- a/sass/style.sass
+++ b/sass/style.sass
@@ -32,8 +32,10 @@ html
   font-size: 62.5%
 
 body
-  display: grid
-  grid-template-rows: auto 1fr auto
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  // grid-template-rows: auto 1fr auto
   min-height: 100vh
   width: 100%
   min-width: 39rem
@@ -45,8 +47,8 @@ body
   color: $black
   background-color: $white
 
-  @media screen and (max-width: $tablet)
-    display: block
+  // @media screen and (max-width: $tablet)
+  //   display: block
 
 h1, h2, h3, h4, h5, h6
   font-family: $font
