--- a/css/style.css
+++ b/css/style.css
@@ -4784,7 +4784,7 @@ dialog {
   line-height: 130%;
   border-radius: 0.4rem;
   color: #0A0A0A;
-  background-color: #FAFAFA;
+  background-color: #fff;
   cursor: pointer;
 }
 
@@ -5248,6 +5248,73 @@ dialog {
   .product__promo__text-n-img__text__details__list__item__text {
     font-size: 1.4rem;
   }
+}
+
+/* line 3627, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block--characteristics {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  margin-top: 3rem;
+  max-width: 80rem;
+}
+
+/* line 3634, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block__characteristics_group {
+  display: flex;
+  flex-direction: column;
+}
+
+/* line 3638, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block__characteristics_group__heading {
+  display: block;
+  margin-bottom: 3rem;
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 130%;
+}
+
+/* line 3645, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block__characteristics_group__list {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+/* line 3650, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block__characteristics_group__list__item {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 130%;
+  color: #8A8A8A;
+}
+
+/* line 3659, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block__characteristics_group__list__item__dots {
+  margin: 0.4em;
+  min-width: 1rem;
+  height: 1rem;
+  flex: 1 0;
+  border-bottom: 1px dotted #8A8A8A;
+}
+
+/* line 3666, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block__characteristics_group__list__item__value {
+  color: #0A0A0A;
+  width: 50%;
+}
+
+/* line 3671, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block__characteristics_group__list__item__value ul {
+  list-style-type: disc;
+}
+
+/* line 3674, ../../../../../Users/eugene/git_projects/retzm/sass/style.sass */
+.product__tabs__content__block__characteristics_group__list__item__value ul li {
+  margin-left: 2rem;
+  list-style-type: disc;
 }
 
 /* Product end */
