--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3302,7 +3302,7 @@ dialog
   line-height: 130%
   border-radius: $radius
   color: $black
-  background-color: $white
+  background-color: #fff
   cursor: pointer
 
 #product__promo:checked ~ .product__tabs__list .product__promo,
@@ -3623,5 +3623,56 @@ dialog
 
   @media screen and (max-width: $tablet)
     font-size: 1.4rem
+
+.product__tabs__content__block--characteristics
+  display: flex
+  flex-direction: column
+  gap: 3rem
+  margin-top: 3rem
+  max-width: 80rem
+
+.product__tabs__content__block__characteristics_group
+  display: flex
+  flex-direction: column
+
+.product__tabs__content__block__characteristics_group__heading
+  display: block
+  margin-bottom: 3rem
+  font-size: 2rem
+  font-weight: 400
+  line-height: 130%
+
+.product__tabs__content__block__characteristics_group__list
+  display: flex
+  flex-direction: column
+  gap: 2.4rem
+
+.product__tabs__content__block__characteristics_group__list__item
+  display: flex
+  justify-content: space-between
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+  color: $grey-dark2
+
+.product__tabs__content__block__characteristics_group__list__item__name
+.product__tabs__content__block__characteristics_group__list__item__dots
+  margin: 0.4em
+  min-width: 1rem
+  height: 1rem
+  flex: 1 0
+  border-bottom: 1px dotted $grey-dark2
+
+.product__tabs__content__block__characteristics_group__list__item__value
+  color: $black
+  width: 50%
+
+.product__tabs__content__block__characteristics_group__list__item__value
+  ul
+    list-style-type: disc
+
+    li
+      margin-left: 2rem
+      list-style-type: disc
 
 /* Product end */
