--- a/sass/style.sass
+++ b/sass/style.sass
@@ -269,6 +269,15 @@ dialog
     background-color: $black
     color: #fff
 
+.button--yellow
+  color: $black
+  background-color: $yellow
+  transition: 0.2s linear
+
+  &:hover
+    background-color: $black
+    color: #fff
+
 .header,
 .main,
 .footer
@@ -2830,26 +2839,26 @@ dialog
   &:hover
     background-image: url("../images/icons/heart-grey.svg")
 
-.catalogue__products__navigation
+.navigation
   display: flex
   flex-direction: column
   gap: .5rem
   margin-top: 1.2rem
 
-.catalogue__products__navigation__more
+.navigation__more
   display: block
   width: 100%
   text-align: center
   line-height: 130%
 
-.catalogue__products__navigation__pagination
+.navigation__pagination
   display: flex
   gap: 1.6rem
 
   @media screen and (max-width: $tablet)
     justify-content: space-between
   
-.catalogue__products__navigation__pagination__item
+.navigation__pagination__item
   display: inline-block
 
   @media screen and (max-width: $tablet)
@@ -2858,21 +2867,21 @@ dialog
     &:nth-child(-1n+4), &:last-child, &:nth-last-child(2)
       display: block
 
-.catalogue__products__navigation__pagination__item__link, .catalogue__products__navigation__pagination__item__hidden_pages
+.navigation__pagination__item__link, .navigation__pagination__item__hidden_pages
   display: inline-block
   padding: 1rem 1.8rem
 
-.catalogue__products__navigation__pagination__item__link
+.navigation__pagination__item__link
   font-size: 1.4rem
   line-height: 130%
   border-radius: $radius
-  font-weight: 700
+  font-weight: 500
 
   &:hover
     background-color: $pink
     color: $white
 
-.catalogue__products__navigation__pagination__item__link--arrow_right
+.navigation__pagination__item__link--arrow_right
   position: relative
   display: inline-block
   width: 3.4rem
@@ -3484,7 +3493,7 @@ dialog
   z-index: -1
   width: 100%
   height: 100%
-  background-image: linear-gradient(#0A0A0A, transparent)
+  background-image: linear-gradient($black, transparent)
 
 .product__promo__double__item__image, .product__promo__tripple__item__image
   position: absolute
@@ -3674,5 +3683,134 @@ dialog
     li
       margin-left: 2rem
       list-style-type: disc
+
+.product__tabs__content__block__reviews
+  display: flex
+  flex-direction: column
+  gap: 2.4rem
+  margin-top: 3rem
+
+.product__tabs__content__block__reviews__heading
+  display: block
+  margin: 0
+  font-size: 2rem
+  font-weight: 400
+  line-height: 130%
+
+.product__tabs__content__block__reviews__message
+  display: flex
+  flex-direction: column
+  gap: .4rem
+  padding: 1.4rem 2rem
+  max-width: 47rem
+  background-color: $grey1
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+  color: $black
+  border-radius: $radius
+
+.product__tabs__content__block__reviews__button
+
+.product__tabs__content__block__reviews__rating
+  display: flex
+  gap: 1rem
+
+.product__tabs__content__block__reviews__rating__text
+  font-size: 1.4rem
+  font-weight: 700
+  line-height: 130%
+  letter-spacing: .2rem
+  color: $black
+
+.product__tabs__content__block__reviews__rating__stars
+  display: flex
+  gap: .4rem
+  width: auto
+
+.product__tabs__content__block__reviews__rating__stars__star
+
+.icon_star
+  display: block
+  width: 2rem
+  height: 2rem
+  background-position: 50% 50%
+  background-size: contain
+  background-repeat: no-repeat
+
+.icon_star--yellow
+  background-image: url('../images/icons/star-yellow.svg')
+
+.icon_star--grey
+  background-image: url('../images/icons/star-grey.svg')
+
+.product__tabs__content__block__reviews__list
+  display: flex
+  flex-direction: column
+  gap: 1rem
+
+.product__tabs__content__block__reviews__list__item
+  display: grid
+  grid-template-columns: 7.6rem auto min-content
+  grid-template-rows: 1fr auto
+  grid-template-areas: "review_image review_summary review_meta" "review_text review_text review_text"
+  gap: 1rem
+  padding: 2rem
+  max-width: 76.6rem
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+  color: $black
+  background-color: #fff
+  border-radius: $radius
+
+.product__tabs__content__block__reviews__list__item__image
+  grid-area: review_image
+  margin: .8rem
+  width: 6rem
+  height: 6rem
+
+.product__tabs__content__block__reviews__list__item__summary
+  grid-area: review_summary
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  gap: 1rem
+
+.product__tabs__content__block__reviews__list__item__summary__name
+  font-weight: 700
+
+.product__tabs__content__block__reviews__list__item__summary__stars
+  display: flex
+  gap: .4rem
+  width: auto
+
+.product__tabs__content__block__reviews__list__item__summary__stars__star
+
+.product__tabs__content__block__reviews__list__item__summary__description
+
+.product__tabs__content__block__reviews__list__item__description__link
+  color: $pink
+
+.product__tabs__content__block__reviews__list__item__text
+  grid-area: review_text
+
+.product__tabs__content__block__reviews__list__item__meta
+  grid-area: review_meta
+  display: flex
+  justify-content: flex-end
+  gap: 2rem
+  flex-wrap: nowrap
+
+.product__tabs__content__block__reviews__list__item__meta__source
+  font-size: 1.2rem
+  color: $grey-soft
+  white-space: nowrap
+
+.product__tabs__content__block__reviews__list__item__meta__date
+  font-size: 1.2rem
+  color: $grey-soft
+  white-space: nowrap
+
 
 /* Product end */
